--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,18 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
+# Tell GitHub Pages to layer on the Academic Pages remote theme
+remote_theme: academicpages/academicpages
+
+# Make sure the remote-theme plugin is enabled
+plugins:
+  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-redirect-from
+  - jemoji
 
 # Basic Site Settings
 locale                   : "en-US"
