--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   location         : "Chicago, IL"
   employer         : "Speechace, LLC"
   uri              : # URL
-  email            : "shamilikhite@gmail.com" 
+  email            : "shamikalikhite@u.northwestern.edu" 
 
   # Academic websites
   academia         : # URL
