--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,11 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-        
+
+  
+
+- title: "CV"
+    url: "https://drive.google.com/file/d/1Ptx813WzwJYpbqIYMgHbk50EPWyqa8Y5/view?usp=sharing"
   
   # - title: "CV"
   #   url: /cv-json/
